[gd_scene load_steps=11 format=4 uid="uid://c02kcbepe14nj"]

[ext_resource type="Script" uid="uid://l6nmsax7u8h3" path="res://scenes/minigame/mini_game.gd" id="1_pb5i6"]
[ext_resource type="TileSet" uid="uid://biiegck24um4j" path="res://assets/tiles/minigame.tres" id="2_diy0u"]
[ext_resource type="Shader" uid="uid://do7xsgic7fbtd" path="res://scenes/minigame/MiniGame_Ziel.gdshader" id="3_kxtkx"]
[ext_resource type="SpriteFrames" uid="uid://jrfq8bcwahhu" path="res://scenes/player/dark.tres" id="4_diy0u"]
[ext_resource type="Texture2D" uid="uid://bv374gefsdpe6" path="res://scenes/minigame/white_rect.png" id="4_n4xfe"]
[ext_resource type="AudioStream" uid="uid://dwds4g2ky5j3h" path="res://assets/Audio/win Sound/Win sound 19.wav" id="5_kxtkx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_diy0u"]
size = Vector2(45, 63)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n4xfe"]
shader = ExtResource("3_kxtkx")
shader_parameter/light_color = Color(0.777422, 0.824541, 0.988609, 1)
shader_parameter/time_speed = 1.0
shader_parameter/wobble_strength = 0.2
shader_parameter/radius = 1.0
shader_parameter/softness = 0.6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kxtkx"]
size = Vector2(19, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n4xfe"]
size = Vector2(99, 4)

[node name="MiniGame" type="Window"]
mode = 3
initial_position = 2
size = Vector2i(544, 416)
script = ExtResource("1_pb5i6")

[node name="Version1" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAAAAAABAAAAAAADAAAAAAACAAAAAAADAAAAAAADAAAAAAADAAAAAAAEAAAAAAADAAAAAAAAAAEAAAADAAEAAAABAAEAAAADAAEAAAABAAIAAAADAAEAAAACAAIAAAAEAAAAAAACAAMAAAAEAAAAAAADAAQAAAAEAAIAAAAEAAQAAAAAAAQAAAAEAAUAAAAAAAQAAAAFAAUAAAAEAAAAAAAFAAYAAAAEAAAAAAAGAAYAAAADAAEAAAAHAAcAAAAEAAAAAAAIAAcAAAADAAEAAAAIAAgAAAADAAEAAAAJAAgAAAAEAAIAAAAKAAkAAAAAAAQAAAALAAkAAAAEAAAAAAALAAoAAAAEAAAAAAAMAAoAAAAEAAAAAAANAAoAAAAEAAAAAAANAAsAAAAEAAAAAAAOAAsAAAAEAAAAAAAAAAIAAAADAAEAAAAAAAMAAAAAAAQAAAAAAAQAAAAAAAQAAAAAAAUAAAAAAAQAAAAAAAYAAAAAAAQAAAAAAAcAAAAAAAQAAAAAAAgAAAAAAAQAAAAAAAkAAAAAAAQAAAAAAAoAAAAAAAQAAAAAAAsAAAAAAAQAAAAAAAwAAAAAAAQAAAABAAMAAAAEAAAAAAABAAQAAAAEAAAAAAABAAUAAAAEAAAAAAABAAYAAAAEAAAAAAABAAcAAAAEAAAAAAABAAgAAAAEAAAAAAABAAkAAAAEAAAAAAABAAoAAAAEAAAAAAABAAsAAAAEAAAAAAABAAwAAAAEAAAAAAACAAEAAAAEAAQAAAACAAQAAAAEAAAAAAACAAUAAAADAAEAAAACAAYAAAADAAEAAAACAAcAAAADAAEAAAACAAgAAAADAAEAAAACAAkAAAADAAEAAAACAAoAAAADAAEAAAACAAsAAAADAAEAAAACAAwAAAADAAEAAAADAAEAAAAEAAQAAAADAAIAAAAEAAAAAAADAAMAAAAEAAAAAAADAAUAAAAEAAIAAAADAAYAAAAEAAIAAAADAAcAAAAEAAIAAAADAAgAAAAEAAIAAAADAAkAAAAEAAIAAAADAAoAAAAEAAIAAAADAAsAAAAEAAIAAAADAAwAAAAEAAIAAAAEAAEAAAAEAAQAAAAEAAIAAAAEAAAAAAAEAAMAAAAAAAQAAAAEAAYAAAAAAAQAAAAEAAcAAAAAAAQAAAAEAAgAAAAAAAQAAAAEAAkAAAAEAAIAAAAEAAoAAAAEAAIAAAAEAAsAAAAEAAIAAAAEAAwAAAAEAAIAAAAFAAAAAAADAAAAAAAFAAEAAAAEAAQAAAAFAAIAAAAEAAAAAAAFAAMAAAAEAAAAAAAFAAQAAAAEAAAAAAAFAAcAAAAEAAAAAAAFAAgAAAAEAAAAAAAFAAkAAAADAAAAAAAFAAoAAAAEAAIAAAAFAAsAAAAEAAIAAAAFAAwAAAAEAAIAAAAGAAAAAAADAAAAAAAGAAEAAAAEAAQAAAAGAAIAAAAEAAAAAAAGAAMAAAAEAAAAAAAGAAQAAAAEAAAAAAAGAAUAAAADAAEAAAAGAAcAAAADAAEAAAAGAAgAAAAEAAAAAAAGAAkAAAADAAAAAAAGAAoAAAAEAAIAAAAGAAsAAAAEAAIAAAAGAAwAAAAEAAIAAAAHAAAAAAADAAAAAAAHAAEAAAAEAAQAAAAHAAIAAAAEAAAAAAAHAAMAAAAEAAAAAAAHAAQAAAAAAAEAAAAHAAUAAAAEAAAAAAAHAAYAAAAEAAAAAAAHAAgAAAAEAAAAAAAHAAkAAAADAAAAAAAHAAoAAAAEAAIAAAAHAAsAAAAEAAIAAAAHAAwAAAAEAAIAAAAIAAAAAAADAAAAAAAIAAEAAAADAAEAAAAIAAIAAAADAAEAAAAIAAMAAAAAAAEAAAAIAAQAAAAEAAAAAAAIAAUAAAAEAAAAAAAIAAYAAAAEAAAAAAAIAAkAAAAEAAIAAAAIAAoAAAAEAAIAAAAIAAsAAAAEAAIAAAAIAAwAAAAEAAIAAAAJAAAAAAADAAAAAAAJAAEAAAAEAAIAAAAJAAIAAAAEAAIAAAAJAAMAAAAEAAQAAAAJAAQAAAAEAAAAAAAJAAUAAAAEAAAAAAAJAAYAAAADAAEAAAAJAAcAAAADAAEAAAAJAAkAAAAEAAIAAAAJAAoAAAAEAAIAAAAJAAsAAAAEAAIAAAAJAAwAAAAEAAIAAAAKAAAAAAADAAAAAAAKAAEAAAAEAAIAAAAKAAIAAAAEAAIAAAAKAAMAAAAEAAQAAAAKAAQAAAAEAAAAAAAKAAUAAAAEAAAAAAAKAAYAAAAEAAAAAAAKAAcAAAAAAAQAAAAKAAgAAAAAAAQAAAAKAAoAAAAAAAQAAAAKAAsAAAAAAAQAAAAKAAwAAAAEAAIAAAALAAAAAAADAAAAAAALAAEAAAAEAAIAAAALAAIAAAAEAAIAAAALAAMAAAAEAAQAAAALAAQAAAAEAAAAAAALAAUAAAAEAAAAAAALAAYAAAAEAAAAAAALAAcAAAAEAAAAAAALAAgAAAAEAAAAAAALAAsAAAAEAAAAAAALAAwAAAADAAAAAAAMAAAAAAADAAAAAAAMAAEAAAAEAAIAAAAMAAIAAAAEAAIAAAAMAAMAAAADAAEAAAAMAAQAAAADAAEAAAAMAAUAAAADAAEAAAAMAAYAAAADAAEAAAAMAAcAAAADAAEAAAAMAAgAAAADAAEAAAAMAAkAAAAEAAQAAAAMAAsAAAAEAAAAAAAMAAwAAAADAAAAAAANAAAAAAAEAAAAAAANAAEAAAAEAAIAAAANAAIAAAAEAAIAAAANAAMAAAAEAAIAAAANAAQAAAAEAAIAAAANAAUAAAAEAAIAAAANAAYAAAAEAAIAAAANAAcAAAAEAAIAAAANAAgAAAAEAAIAAAANAAkAAAAEAAQAAAANAAwAAAADAAAAAAAOAAAAAAAEAAAAAAAOAAEAAAAEAAAAAAAOAAIAAAAEAAAAAAAOAAMAAAAEAAAAAAAOAAQAAAAEAAAAAAAOAAUAAAAEAAAAAAAOAAYAAAAEAAAAAAAOAAcAAAAEAAAAAAAOAAgAAAAEAAIAAAAOAAkAAAAEAAQAAAAOAAoAAAAEAAAAAAAOAAwAAAADAAAAAAAPAAAAAAAEAAAAAAAPAAEAAAADAAEAAAAPAAIAAAADAAEAAAAPAAMAAAADAAEAAAAPAAQAAAADAAEAAAAPAAUAAAADAAEAAAAPAAYAAAAEAAQAAAAPAAcAAAAEAAAAAAAPAAgAAAAEAAAAAAAPAAkAAAAEAAAAAAAPAAoAAAAEAAAAAAAPAAsAAAAEAAAAAAAPAAwAAAADAAAAAAAQAAAAAAAAAAQAAAAQAAEAAAAAAAQAAAAQAAIAAAAAAAQAAAAQAAMAAAAAAAQAAAAQAAQAAAAAAAQAAAAQAAUAAAAAAAQAAAAQAAYAAAAAAAQAAAAQAAcAAAAAAAQAAAAQAAgAAAAAAAQAAAAQAAkAAAAAAAQAAAAQAAoAAAAAAAQAAAAQAAsAAAAAAAQAAAAQAAwAAAAEAAIAAAA=")
enabled = false
tile_set = ExtResource("2_diy0u")

[node name="Version2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAEAAIAAAABAAAAAAAEAAIAAAACAAAAAAAEAAIAAAADAAAAAAAEAAIAAAAEAAAAAAAEAAIAAAAAAAEAAAAEAAIAAAABAAEAAAAEAAIAAAABAAIAAAAEAAIAAAACAAIAAAAEAAIAAAACAAMAAAADAAMAAAADAAQAAAAEAAAAAAAEAAQAAAAEAAAAAAAEAAUAAAAEAAAAAAAFAAUAAAAAAAEAAAAFAAYAAAABAAIAAAAGAAYAAAAAAAIAAAAHAAcAAAAEAAIAAAAIAAcAAAAEAAIAAAAIAAgAAAAEAAIAAAAJAAgAAAAEAAIAAAAKAAkAAAAEAAIAAAALAAkAAAAEAAIAAAALAAoAAAAEAAIAAAAMAAoAAAAEAAIAAAANAAoAAAAEAAIAAAANAAsAAAAEAAIAAAAOAAsAAAAEAAIAAAAAAAIAAAAEAAIAAAAAAAMAAAAEAAIAAAAAAAQAAAAEAAIAAAAAAAUAAAAEAAIAAAAAAAYAAAAEAAIAAAAAAAcAAAAEAAIAAAAAAAgAAAAEAAIAAAAAAAkAAAAEAAIAAAAAAAoAAAAEAAIAAAAAAAsAAAADAAMAAAAAAAwAAAADAAEAAAABAAMAAAAEAAIAAAABAAQAAAAEAAIAAAABAAUAAAAEAAIAAAABAAYAAAAEAAIAAAABAAcAAAAEAAIAAAABAAgAAAAEAAIAAAABAAkAAAAEAAIAAAABAAoAAAAAAAAAAAABAAsAAAADAAIAAAABAAwAAAAEAAAAAAACAAEAAAAEAAIAAAACAAQAAAADAAMAAAACAAUAAAADAAMAAAACAAYAAAADAAMAAAACAAcAAAAEAAIAAAACAAgAAAAEAAIAAAACAAkAAAAAAAAAAAACAAoAAAABAAMAAAACAAsAAAADAAIAAAACAAwAAAAEAAAAAAADAAEAAAAEAAIAAAADAAIAAAAAAAAAAAADAAMAAAABAAQAAAADAAUAAAAEAAAAAAADAAYAAAAEAAAAAAADAAcAAAADAAMAAAADAAgAAAAAAAAAAAADAAkAAAABAAMAAAADAAoAAAADAAIAAAADAAsAAAAEAAAAAAADAAwAAAAAAAIAAAAEAAEAAAAEAAQAAAAEAAIAAAABAAMAAAAEAAMAAAADAAIAAAAEAAYAAAAEAAAAAAAEAAcAAAAEAAAAAAAEAAgAAAAEAAAAAAAEAAkAAAADAAIAAAAEAAoAAAAEAAAAAAAEAAsAAAAAAAIAAAAEAAwAAAAEAAIAAAAFAAAAAAAEAAIAAAAFAAEAAAAAAAAAAAAFAAIAAAABAAQAAAAFAAMAAAAEAAAAAAAFAAQAAAAAAAIAAAAFAAcAAAAEAAAAAAAFAAgAAAAEAAAAAAAFAAkAAAAEAAAAAAAFAAoAAAAAAAIAAAAFAAsAAAAEAAIAAAAFAAwAAAAEAAIAAAAGAAAAAAAEAAQAAAAGAAEAAAABAAMAAAAGAAIAAAADAAIAAAAGAAMAAAAEAAIAAAAGAAQAAAAEAAIAAAAGAAUAAAAEAAIAAAAGAAcAAAAAAAIAAAAGAAgAAAAAAAIAAAAGAAkAAAAAAAIAAAAGAAoAAAAEAAIAAAAGAAsAAAAEAAIAAAAGAAwAAAAEAAIAAAAHAAAAAAAEAAQAAAAHAAEAAAABAAQAAAAHAAIAAAAEAAAAAAAHAAMAAAADAAMAAAAHAAQAAAADAAMAAAAHAAUAAAADAAMAAAAHAAYAAAAEAAIAAAAHAAgAAAAEAAIAAAAHAAkAAAAEAAIAAAAHAAoAAAAEAAIAAAAHAAsAAAAEAAIAAAAHAAwAAAAEAAIAAAAIAAAAAAAEAAQAAAAIAAEAAAABAAQAAAAIAAIAAAAEAAAAAAAIAAMAAAAEAAAAAAAIAAQAAAAEAAAAAAAIAAUAAAAEAAAAAAAIAAYAAAADAAMAAAAIAAkAAAAEAAIAAAAIAAoAAAAEAAIAAAAIAAsAAAAEAAIAAAAIAAwAAAAEAAIAAAAJAAAAAAAEAAQAAAAJAAEAAAABAAIAAAAJAAIAAAAEAAAAAAAJAAMAAAAEAAAAAAAJAAQAAAAAAAEAAAAJAAUAAAABAAIAAAAJAAYAAAAEAAAAAAAJAAcAAAADAAMAAAAJAAkAAAAEAAIAAAAJAAoAAAAEAAIAAAAJAAsAAAAEAAIAAAAJAAwAAAAEAAIAAAAKAAAAAAAEAAIAAAAKAAEAAAAAAAIAAAAKAAIAAAAAAAIAAAAKAAMAAAAAAAIAAAAKAAQAAAAEAAIAAAAKAAUAAAAAAAEAAAAKAAYAAAABAAIAAAAKAAcAAAAEAAAAAAAKAAgAAAAEAAIAAAAKAAoAAAAEAAIAAAAKAAsAAAAEAAIAAAAKAAwAAAAEAAIAAAALAAAAAAAEAAIAAAALAAEAAAAEAAIAAAALAAIAAAAEAAIAAAALAAMAAAAEAAIAAAALAAQAAAAEAAIAAAALAAUAAAAEAAIAAAALAAYAAAAAAAEAAAALAAcAAAAEAAAAAAALAAgAAAAEAAIAAAALAAsAAAAEAAIAAAALAAwAAAAEAAIAAAAMAAAAAAAEAAIAAAAMAAEAAAAEAAIAAAAMAAIAAAAEAAIAAAAMAAMAAAADAAMAAAAMAAQAAAADAAMAAAAMAAUAAAADAAMAAAAMAAYAAAAEAAIAAAAMAAcAAAAEAAAAAAAMAAgAAAAEAAIAAAAMAAkAAAAEAAIAAAAMAAsAAAAEAAIAAAAMAAwAAAAEAAIAAAANAAAAAAAEAAIAAAANAAEAAAADAAMAAAANAAIAAAAAAAAAAAANAAMAAAABAAMAAAANAAQAAAACAAMAAAANAAUAAAACAAMAAAANAAYAAAAAAAAAAAANAAcAAAAEAAAAAAANAAgAAAAEAAIAAAANAAkAAAAEAAIAAAANAAwAAAAEAAIAAAAOAAAAAAAEAAIAAAAOAAEAAAAEAAAAAAAOAAIAAAAEAAAAAAAOAAMAAAAEAAAAAAAOAAQAAAAAAAEAAAAOAAUAAAABAAIAAAAOAAYAAAACAAMAAAAOAAcAAAAEAAAAAAAOAAgAAAAEAAIAAAAOAAkAAAAEAAIAAAAOAAoAAAAEAAIAAAAOAAwAAAAEAAIAAAAPAAAAAAAEAAIAAAAPAAEAAAAAAAIAAAAPAAIAAAAAAAIAAAAPAAMAAAAAAAIAAAAPAAQAAAAEAAIAAAAPAAUAAAAAAAIAAAAPAAYAAAAAAAIAAAAPAAcAAAAAAAIAAAAPAAgAAAAEAAIAAAAPAAkAAAAEAAIAAAAPAAoAAAAEAAIAAAAPAAsAAAAEAAIAAAAPAAwAAAAEAAIAAAAQAAAAAAAEAAIAAAAQAAEAAAAEAAIAAAAQAAIAAAAEAAIAAAAQAAMAAAAEAAIAAAAQAAQAAAAEAAIAAAAQAAUAAAAEAAIAAAAQAAYAAAAEAAIAAAAQAAcAAAAEAAIAAAAQAAgAAAAEAAIAAAAQAAkAAAAEAAIAAAAQAAoAAAAEAAIAAAAQAAsAAAAEAAIAAAAQAAwAAAAEAAIAAAA=")
enabled = false
tile_set = ExtResource("2_diy0u")

[node name="Version3" type="TileMapLayer" parent="."]
position = Vector2(1, 12)
tile_map_data = PackedByteArray("AAAAAAAAAAAEAAIAAAABAAAAAAAEAAIAAAACAAAAAAAEAAIAAAADAAAAAAAEAAIAAAAEAAAAAAAEAAIAAAAAAAEAAAAEAAIAAAABAAEAAAAEAAIAAAABAAIAAAAEAAIAAAACAAIAAAAEAAIAAAACAAMAAAAEAAIAAAADAAQAAAAEAAIAAAAEAAQAAAAEAAIAAAAEAAUAAAAEAAIAAAAFAAUAAAAEAAIAAAAFAAYAAAAEAAQAAAAGAAYAAAAEAAQAAAAHAAcAAAABAAQAAAAIAAcAAAABAAQAAAAIAAgAAAAEAAIAAAAJAAgAAAAEAAIAAAAKAAkAAAAEAAIAAAALAAkAAAAEAAIAAAALAAoAAAAEAAIAAAAMAAoAAAAEAAIAAAANAAoAAAAEAAIAAAANAAsAAAAEAAIAAAAOAAsAAAAEAAIAAAAAAAIAAAAEAAIAAAAAAAMAAAAEAAIAAAAAAAQAAAAEAAIAAAAAAAUAAAAEAAIAAAAAAAYAAAAEAAIAAAAAAAcAAAAEAAIAAAAAAAgAAAAEAAIAAAAAAAkAAAAEAAIAAAAAAAoAAAAEAAIAAAAAAAsAAAADAAMAAAAAAAwAAAADAAMAAAABAAMAAAAEAAIAAAABAAQAAAAEAAIAAAABAAUAAAAEAAIAAAABAAYAAAAEAAIAAAABAAcAAAAEAAIAAAABAAgAAAAEAAIAAAABAAkAAAAEAAIAAAABAAoAAAAEAAQAAAABAAsAAAABAAQAAAABAAwAAAAEAAAAAAACAAEAAAAEAAIAAAACAAQAAAAEAAIAAAACAAUAAAAEAAIAAAACAAYAAAAEAAIAAAACAAcAAAADAAMAAAACAAgAAAADAAMAAAACAAkAAAADAAMAAAACAAoAAAAEAAQAAAACAAsAAAABAAQAAAACAAwAAAAEAAIAAAADAAEAAAAEAAIAAAADAAIAAAAEAAIAAAADAAMAAAAEAAIAAAADAAUAAAAEAAIAAAADAAYAAAAEAAQAAAADAAcAAAABAAQAAAADAAgAAAAEAAAAAAADAAkAAAAEAAAAAAADAAoAAAAAAAAAAAADAAsAAAABAAQAAAADAAwAAAAEAAIAAAAEAAEAAAAEAAIAAAAEAAIAAAAEAAIAAAAEAAMAAAAEAAIAAAAEAAYAAAAEAAQAAAAEAAcAAAABAAQAAAAEAAgAAAAAAAEAAAAEAAkAAAABAAIAAAAEAAoAAAACAAMAAAAEAAsAAAADAAIAAAAEAAwAAAAEAAIAAAAFAAAAAAAEAAIAAAAFAAEAAAAEAAIAAAAFAAIAAAAEAAIAAAAFAAMAAAAEAAIAAAAFAAQAAAAEAAIAAAAFAAcAAAABAAQAAAAFAAgAAAAEAAIAAAAFAAkAAAAAAAIAAAAFAAoAAAAAAAIAAAAFAAsAAAAAAAIAAAAFAAwAAAAEAAIAAAAGAAAAAAAEAAIAAAAGAAEAAAAEAAIAAAAGAAIAAAAEAAIAAAAGAAMAAAAEAAIAAAAGAAQAAAAEAAIAAAAGAAUAAAAEAAIAAAAGAAcAAAABAAQAAAAGAAgAAAAEAAIAAAAGAAkAAAAEAAIAAAAGAAoAAAAEAAIAAAAGAAsAAAAEAAIAAAAGAAwAAAAEAAIAAAAHAAAAAAAEAAIAAAAHAAEAAAAEAAIAAAAHAAIAAAAEAAIAAAAHAAMAAAAEAAIAAAAHAAQAAAAEAAIAAAAHAAUAAAAEAAIAAAAHAAYAAAAEAAQAAAAHAAgAAAAEAAIAAAAHAAkAAAAEAAIAAAAHAAoAAAAEAAIAAAAHAAsAAAAEAAIAAAAHAAwAAAAEAAIAAAAIAAAAAAAEAAIAAAAIAAEAAAAEAAIAAAAIAAIAAAAEAAIAAAAIAAMAAAAEAAIAAAAIAAQAAAAEAAIAAAAIAAUAAAAEAAIAAAAIAAYAAAAEAAQAAAAIAAkAAAAEAAIAAAAIAAoAAAAEAAIAAAAIAAsAAAAEAAIAAAAIAAwAAAAEAAIAAAAJAAAAAAAEAAIAAAAJAAEAAAAEAAIAAAAJAAIAAAAEAAIAAAAJAAMAAAAEAAIAAAAJAAQAAAADAAMAAAAJAAUAAAADAAMAAAAJAAYAAAAAAAAAAAAJAAcAAAABAAQAAAAJAAkAAAAEAAIAAAAJAAoAAAAEAAIAAAAJAAsAAAAEAAIAAAAJAAwAAAAEAAIAAAAKAAAAAAAEAAIAAAAKAAEAAAAEAAIAAAAKAAIAAAAEAAIAAAAKAAMAAAAEAAQAAAAKAAQAAAABAAQAAAAKAAUAAAAEAAAAAAAKAAYAAAAEAAAAAAAKAAcAAAAEAAAAAAAKAAgAAAAEAAIAAAAKAAoAAAAEAAIAAAAKAAsAAAAEAAIAAAAKAAwAAAAEAAIAAAALAAAAAAAEAAIAAAALAAEAAAAEAAIAAAALAAIAAAAEAAIAAAALAAMAAAAEAAQAAAALAAQAAAABAAQAAAALAAUAAAAAAAIAAAALAAYAAAAAAAIAAAALAAcAAAAAAAIAAAALAAgAAAAEAAIAAAALAAsAAAAEAAIAAAALAAwAAAAEAAIAAAAMAAAAAAAEAAIAAAAMAAEAAAAEAAIAAAAMAAIAAAAEAAIAAAAMAAMAAAAEAAQAAAAMAAQAAAABAAQAAAAMAAUAAAAEAAIAAAAMAAYAAAAEAAIAAAAMAAcAAAAEAAIAAAAMAAgAAAAEAAIAAAAMAAkAAAAEAAIAAAAMAAsAAAAEAAIAAAAMAAwAAAAEAAIAAAANAAAAAAAEAAIAAAANAAEAAAADAAMAAAANAAIAAAADAAMAAAANAAMAAAAAAAAAAAANAAQAAAABAAQAAAANAAUAAAAEAAIAAAANAAYAAAAEAAIAAAANAAcAAAAEAAIAAAANAAgAAAAEAAIAAAANAAkAAAAEAAIAAAANAAwAAAAEAAIAAAAOAAAAAAADAAIAAAAOAAEAAAAEAAAAAAAOAAIAAAAEAAAAAAAOAAMAAAAEAAAAAAAOAAQAAAAEAAAAAAAOAAUAAAAEAAIAAAAOAAYAAAAEAAIAAAAOAAcAAAAEAAIAAAAOAAgAAAAEAAIAAAAOAAkAAAAEAAIAAAAOAAoAAAAEAAIAAAAOAAwAAAAEAAIAAAAPAAAAAAAEAAIAAAAPAAEAAAAAAAIAAAAPAAIAAAAAAAIAAAAPAAMAAAAAAAIAAAAPAAQAAAAAAAIAAAAPAAUAAAAEAAIAAAAPAAYAAAAEAAIAAAAPAAcAAAAEAAIAAAAPAAgAAAAEAAIAAAAPAAkAAAAEAAIAAAAPAAoAAAAEAAIAAAAPAAsAAAAEAAIAAAAPAAwAAAAEAAIAAAAQAAAAAAAEAAIAAAAQAAEAAAAEAAIAAAAQAAIAAAAEAAIAAAAQAAMAAAAEAAIAAAAQAAQAAAAEAAIAAAAQAAUAAAAEAAIAAAAQAAYAAAAEAAIAAAAQAAcAAAAEAAIAAAAQAAgAAAAEAAIAAAAQAAkAAAAEAAIAAAAQAAoAAAAEAAIAAAAQAAsAAAAEAAIAAAAQAAwAAAAEAAIAAAA=")
enabled = false
tile_set = ExtResource("2_diy0u")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 106.0
offset_top = 134.0
offset_right = 397.0
offset_bottom = 157.0
text = "Ihr habt die Blockade erfolgreich zerstört!"

[node name="Map" type="Node2D" parent="."]

[node name="StartPosition" type="Node2D" parent="Map"]
position = Vector2(47, 396)

[node name="EndZone" type="Area2D" parent="Map"]
position = Vector2(464, 16.165)
rotation = -1.56207
scale = Vector2(0.719998, 1.5918)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/EndZone"]
position = Vector2(0.5, 4.5)
shape = SubResource("RectangleShape2D_diy0u")

[node name="Sprite2D" type="Sprite2D" parent="Map/EndZone"]
top_level = true
material = SubResource("ShaderMaterial_n4xfe")
position = Vector2(464, 19)
scale = Vector2(0.239436, 0.216667)
texture = ExtResource("4_n4xfe")

[node name="Player" type="CharacterBody2D" parent="Map"]
position = Vector2(48, 395)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Map/Player"]
sprite_frames = ExtResource("4_diy0u")
animation = &"idle_front"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Player"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_kxtkx")

[node name="StaticBody2D" type="StaticBody2D" parent="Map"]
position = Vector2(0, 51)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/StaticBody2D"]
position = Vector2(49.5, 365)
shape = SubResource("RectangleShape2D_n4xfe")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_kxtkx")

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="body_entered" from="Map/EndZone" to="." method="_on_end_zone_body_entered"]
